DimensionDefinitionLanguage/eet.output
   0  $accept : line_list $end

   1  line_list : line
   2            | line_list line

   3  line : dimension_expression END

   4  dimension_expression : arg
   5                       | list
   6                       | arg RULE arg
   7                       | arg RULE list
   8                       | list RULE arg
   9                       | list RULE list
  10                       | arg RULE arg REW arg
  11                       | arg RULE arg REW list
  12                       | arg RULE list REW arg
  13                       | arg RULE list REW list
  14                       | list RULE arg REW arg
  15                       | list RULE arg REW list
  16                       | list RULE list REW arg
  17                       | list RULE list REW list

  18  list : arg
  19       | arg chain

  20  chain : arg
  21        | FUNC_S chain FUNC_E
  22        | FUNC_S FUNC_E
  23        | chain LIST chain
  24        | chain chain

  25  arg : ARGEX
  26      | ARGEX DIM

state 0
	$accept : . line_list $end  (0)

	ARGEX  shift 1
	.  error

	line_list  goto 2
	line  goto 3
	dimension_expression  goto 4
	arg  goto 5
	list  goto 6


state 1
	arg : ARGEX .  (25)
	arg : ARGEX . DIM  (26)

	DIM  shift 7
	ARGEX  reduce 25
	LIST  reduce 25
	FUNC_S  reduce 25
	FUNC_E  reduce 25
	RULE  reduce 25
	REW  reduce 25
	END  reduce 25


state 2
	$accept : line_list . $end  (0)
	line_list : line_list . line  (2)

	$end  accept
	ARGEX  shift 1
	.  error

	line  goto 8
	dimension_expression  goto 4
	arg  goto 5
	list  goto 6


state 3
	line_list : line .  (1)

	.  reduce 1


state 4
	line : dimension_expression . END  (3)

	END  shift 9
	.  error


5: shift/reduce conflict (shift 11, reduce 18) on RULE
5: reduce/reduce conflict (reduce 4, reduce 18) on END
state 5
	dimension_expression : arg .  (4)
	dimension_expression : arg . RULE arg  (6)
	dimension_expression : arg . RULE list  (7)
	dimension_expression : arg . RULE arg REW arg  (10)
	dimension_expression : arg . RULE arg REW list  (11)
	dimension_expression : arg . RULE list REW arg  (12)
	dimension_expression : arg . RULE list REW list  (13)
	list : arg .  (18)
	list : arg . chain  (19)

	ARGEX  shift 1
	FUNC_S  shift 10
	RULE  shift 11
	END  reduce 4

	arg  goto 12
	chain  goto 13


state 6
	dimension_expression : list .  (5)
	dimension_expression : list . RULE arg  (8)
	dimension_expression : list . RULE list  (9)
	dimension_expression : list . RULE arg REW arg  (14)
	dimension_expression : list . RULE arg REW list  (15)
	dimension_expression : list . RULE list REW arg  (16)
	dimension_expression : list . RULE list REW list  (17)

	RULE  shift 14
	END  reduce 5


state 7
	arg : ARGEX DIM .  (26)

	.  reduce 26


state 8
	line_list : line_list line .  (2)

	.  reduce 2


state 9
	line : dimension_expression END .  (3)

	.  reduce 3


state 10
	chain : FUNC_S . chain FUNC_E  (21)
	chain : FUNC_S . FUNC_E  (22)

	ARGEX  shift 1
	FUNC_S  shift 10
	FUNC_E  shift 15
	.  error

	arg  goto 12
	chain  goto 16


state 11
	dimension_expression : arg RULE . arg  (6)
	dimension_expression : arg RULE . list  (7)
	dimension_expression : arg RULE . arg REW arg  (10)
	dimension_expression : arg RULE . arg REW list  (11)
	dimension_expression : arg RULE . list REW arg  (12)
	dimension_expression : arg RULE . list REW list  (13)

	ARGEX  shift 1
	.  error

	arg  goto 17
	list  goto 18


state 12
	chain : arg .  (20)

	.  reduce 20


state 13
	list : arg chain .  (19)
	chain : chain . LIST chain  (23)
	chain : chain . chain  (24)

	ARGEX  shift 1
	LIST  shift 19
	FUNC_S  shift 10
	RULE  reduce 19
	REW  reduce 19
	END  reduce 19

	arg  goto 12
	chain  goto 20


state 14
	dimension_expression : list RULE . arg  (8)
	dimension_expression : list RULE . list  (9)
	dimension_expression : list RULE . arg REW arg  (14)
	dimension_expression : list RULE . arg REW list  (15)
	dimension_expression : list RULE . list REW arg  (16)
	dimension_expression : list RULE . list REW list  (17)

	ARGEX  shift 1
	.  error

	arg  goto 21
	list  goto 22


state 15
	chain : FUNC_S FUNC_E .  (22)

	.  reduce 22


state 16
	chain : FUNC_S chain . FUNC_E  (21)
	chain : chain . LIST chain  (23)
	chain : chain . chain  (24)

	ARGEX  shift 1
	LIST  shift 19
	FUNC_S  shift 10
	FUNC_E  shift 23
	.  error

	arg  goto 12
	chain  goto 20


17: shift/reduce conflict (shift 24, reduce 18) on REW
17: reduce/reduce conflict (reduce 6, reduce 18) on END
state 17
	dimension_expression : arg RULE arg .  (6)
	dimension_expression : arg RULE arg . REW arg  (10)
	dimension_expression : arg RULE arg . REW list  (11)
	list : arg .  (18)
	list : arg . chain  (19)

	ARGEX  shift 1
	FUNC_S  shift 10
	REW  shift 24
	END  reduce 6

	arg  goto 12
	chain  goto 13


state 18
	dimension_expression : arg RULE list .  (7)
	dimension_expression : arg RULE list . REW arg  (12)
	dimension_expression : arg RULE list . REW list  (13)

	REW  shift 25
	END  reduce 7


state 19
	chain : chain LIST . chain  (23)

	ARGEX  shift 1
	FUNC_S  shift 10
	.  error

	arg  goto 12
	chain  goto 26


20: shift/reduce conflict (shift 1, reduce 24) on ARGEX
20: shift/reduce conflict (shift 19, reduce 24) on LIST
20: shift/reduce conflict (shift 10, reduce 24) on FUNC_S
state 20
	chain : chain . LIST chain  (23)
	chain : chain . chain  (24)
	chain : chain chain .  (24)

	ARGEX  shift 1
	LIST  shift 19
	FUNC_S  shift 10
	FUNC_E  reduce 24
	RULE  reduce 24
	REW  reduce 24
	END  reduce 24

	arg  goto 12
	chain  goto 20


21: shift/reduce conflict (shift 27, reduce 18) on REW
21: reduce/reduce conflict (reduce 8, reduce 18) on END
state 21
	dimension_expression : list RULE arg .  (8)
	dimension_expression : list RULE arg . REW arg  (14)
	dimension_expression : list RULE arg . REW list  (15)
	list : arg .  (18)
	list : arg . chain  (19)

	ARGEX  shift 1
	FUNC_S  shift 10
	REW  shift 27
	END  reduce 8

	arg  goto 12
	chain  goto 13


state 22
	dimension_expression : list RULE list .  (9)
	dimension_expression : list RULE list . REW arg  (16)
	dimension_expression : list RULE list . REW list  (17)

	REW  shift 28
	END  reduce 9


state 23
	chain : FUNC_S chain FUNC_E .  (21)

	.  reduce 21


state 24
	dimension_expression : arg RULE arg REW . arg  (10)
	dimension_expression : arg RULE arg REW . list  (11)

	ARGEX  shift 1
	.  error

	arg  goto 29
	list  goto 30


state 25
	dimension_expression : arg RULE list REW . arg  (12)
	dimension_expression : arg RULE list REW . list  (13)

	ARGEX  shift 1
	.  error

	arg  goto 31
	list  goto 32


state 26
	chain : chain . LIST chain  (23)
	chain : chain LIST chain .  (23)
	chain : chain . chain  (24)

	LIST  shift 19
	ARGEX  reduce 23
	FUNC_S  reduce 23
	FUNC_E  reduce 23
	RULE  reduce 23
	REW  reduce 23
	END  reduce 23

	arg  goto 12
	chain  goto 20


state 27
	dimension_expression : list RULE arg REW . arg  (14)
	dimension_expression : list RULE arg REW . list  (15)

	ARGEX  shift 1
	.  error

	arg  goto 33
	list  goto 34


state 28
	dimension_expression : list RULE list REW . arg  (16)
	dimension_expression : list RULE list REW . list  (17)

	ARGEX  shift 1
	.  error

	arg  goto 35
	list  goto 36


29: reduce/reduce conflict (reduce 10, reduce 18) on END
state 29
	dimension_expression : arg RULE arg REW arg .  (10)
	list : arg .  (18)
	list : arg . chain  (19)

	ARGEX  shift 1
	FUNC_S  shift 10
	END  reduce 10

	arg  goto 12
	chain  goto 13


state 30
	dimension_expression : arg RULE arg REW list .  (11)

	.  reduce 11


31: reduce/reduce conflict (reduce 12, reduce 18) on END
state 31
	dimension_expression : arg RULE list REW arg .  (12)
	list : arg .  (18)
	list : arg . chain  (19)

	ARGEX  shift 1
	FUNC_S  shift 10
	END  reduce 12

	arg  goto 12
	chain  goto 13


state 32
	dimension_expression : arg RULE list REW list .  (13)

	.  reduce 13


33: reduce/reduce conflict (reduce 14, reduce 18) on END
state 33
	dimension_expression : list RULE arg REW arg .  (14)
	list : arg .  (18)
	list : arg . chain  (19)

	ARGEX  shift 1
	FUNC_S  shift 10
	END  reduce 14

	arg  goto 12
	chain  goto 13


state 34
	dimension_expression : list RULE arg REW list .  (15)

	.  reduce 15


35: reduce/reduce conflict (reduce 16, reduce 18) on END
state 35
	dimension_expression : list RULE list REW arg .  (16)
	list : arg .  (18)
	list : arg . chain  (19)

	ARGEX  shift 1
	FUNC_S  shift 10
	END  reduce 16

	arg  goto 12
	chain  goto 13


state 36
	dimension_expression : list RULE list REW list .  (17)

	.  reduce 17


Rules never reduced:
	list : arg  (18)


State 5 contains 1 shift/reduce conflict, 1 reduce/reduce conflict.
State 17 contains 1 shift/reduce conflict, 1 reduce/reduce conflict.
State 20 contains 3 shift/reduce conflicts.
State 21 contains 1 shift/reduce conflict, 1 reduce/reduce conflict.
State 29 contains 1 reduce/reduce conflict.
State 31 contains 1 reduce/reduce conflict.
State 33 contains 1 reduce/reduce conflict.
State 35 contains 1 reduce/reduce conflict.


17 terminals, 7 nonterminals
27 grammar rules, 37 states
